fix(styles): prevent grid overflow

--- a/src/styles/_callouts.scss
+++ b/src/styles/_callouts.scss
@@ -23,7 +23,7 @@
 
 	&-indicator {
 		display: grid;
-		grid-template-columns: auto 1fr;
+		grid-template-columns: auto minmax(0, 1fr);
 		gap: 0.5ch;
 		color: var(--calloutFg);
 	}
