--- a/src/styles/_codeblock.scss
+++ b/src/styles/_codeblock.scss
@@ -9,7 +9,7 @@
 
 	&-header {
 		display: grid;
-		grid-template-columns: auto 1fr auto;
+		grid-template-columns: auto minmax(0, 1fr) auto;
 		gap: 0.5rem;
 
 		color: var(--baseline-fg-caption);
